examples/type_system/failing/95_wrong_argument_count_too_few.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E056: statically-known call arity mismatch (too few arguments).
fn add(a: Int, b: Int) -> Int {
    a + b
}

fn main() -> Unit {
    let _x = add(1)
}
